@@ -1,5 +1,6 @@
 14 February 2012: Wouter
 	- Fix sticky NS (ghost domain problem) if prefetch is yes.
+	- iter forwards uses malloc inside for more dynamicity.
 
 13 February 2012: Wouter
 	- RT#2955. Fix for cygwin compilation. 
